--- a/app/src/main/res/drawable/archer2p.xml
+++ b/app/src/main/res/drawable/archer2p.xml
@@ -1,35 +1,72 @@
-<vector android:autoMirrored="true" android:height="52.680847dp"
-    android:viewportHeight="65.654335" android:viewportWidth="49.850628"
-    android:width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="40dp"
+    android:height="52.680847dp"
+    android:autoMirrored="true"
+    android:viewportWidth="49.850628"
+    android:viewportHeight="65.654335">
+    <path
+        android:fillColor="#00000000"
         android:pathData="m22.5772,0.8246c0,0 -25.9566,24.5454 -0.5643,64.4726"
-        android:strokeAlpha="1" android:strokeColor="#000000"
-        android:strokeLineCap="butt" android:strokeLineJoin="round" android:strokeWidth="0.98461366"/>
-    <path android:fillColor="#FF000000"
+        android:strokeWidth="0.98461366"
+        android:strokeAlpha="1"
+        android:strokeColor="#000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillColor="#FF000000"
         android:pathData="M35.6229,20.5a6.9926,9.4494 0,1 0,13.9851 0a6.9926,9.4494 0,1 0,-13.9851 0z"
-        android:strokeAlpha="1" android:strokeColor="#050000" android:strokeWidth="0.26499999"/>
-    <path android:fillColor="#00000000"
+        android:strokeWidth="0.26499999"
+        android:strokeAlpha="1"
+        android:strokeColor="#050000" />
+    <path
+        android:fillColor="#00000000"
         android:pathData="M21.8849,65.3371 L22.5772,0.8246"
-        android:strokeAlpha="1" android:strokeColor="#000000"
-        android:strokeLineCap="butt" android:strokeLineJoin="miter" android:strokeWidth="0.06636937"/>
-    <path android:fillColor="#FF000000"
+        android:strokeWidth="0.06636937"
+        android:strokeAlpha="1"
+        android:strokeColor="#000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+    <path
+        android:fillColor="#FF000000"
         android:pathData="M42.1976,30.9767h0.8796v2.2827h-0.8796z"
-        android:strokeAlpha="1" android:strokeColor="#050000"
-        android:strokeLineCap="square" android:strokeLineJoin="miter" android:strokeWidth="3.38768864"/>
-    <path android:fillColor="#FF000000"
+        android:strokeWidth="3.38768864"
+        android:strokeAlpha="1"
+        android:strokeColor="#050000"
+        android:strokeLineCap="square"
+        android:strokeLineJoin="miter" />
+    <path
+        android:fillColor="#FF000000"
         android:pathData="M12.6395,33.723a14.9874,0.4911 0,1 0,29.9748 0a14.9874,0.4911 0,1 0,-29.9748 0z"
-        android:strokeAlpha="1" android:strokeColor="#050000"
-        android:strokeLineCap="square" android:strokeLineJoin="round" android:strokeWidth="3.79175091"/>
-    <path android:fillAlpha="1" android:fillColor="#17ee00"
+        android:strokeWidth="3.79175091"
+        android:strokeAlpha="1"
+        android:strokeColor="#050000"
+        android:strokeLineCap="square"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillAlpha="1"
+        android:fillColor="#17ee00"
         android:pathData="m39.9191,19.3181a2.1382,1.0691 0,0 1,-2.8633 -0.0066,2.1382 1.0691,0 0,1 -0.2829,-1.4246 2.1382,1.0691 0,0 1,2.8048 -0.2879,2.1382 1.0691,0 0,1 0.8626,1.3651"
-        android:strokeAlpha="1" android:strokeColor="#050000"
-        android:strokeLineCap="square" android:strokeLineJoin="round" android:strokeWidth="0.2"/>
-    <path android:fillAlpha="1" android:fillColor="#700000"
+        android:strokeWidth="0.2"
+        android:strokeAlpha="1"
+        android:strokeColor="#050000"
+        android:strokeLineCap="square"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillAlpha="1"
+        android:fillColor="#700000"
         android:pathData="m47.8506,39.7663 l-0.9449,-3.4018 -1.7009,-1.8899 -3.0072,-1.2152 -3.2294,3.1996 -0.378,3.4018 -1.0394,23.6235 10.2999,0z"
-        android:strokeAlpha="1" android:strokeColor="#000000"
-        android:strokeLineCap="butt" android:strokeLineJoin="miter" android:strokeWidth="1"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
+        android:strokeWidth="1"
+        android:strokeAlpha="1"
+        android:strokeColor="#000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
+    <path
+        android:fillAlpha="1"
+        android:fillColor="#000000"
         android:pathData="m35.8499,20.8675 l-0.9449,1.9844 1.5119,0.189z"
-        android:strokeAlpha="1" android:strokeColor="#000000"
-        android:strokeLineCap="butt" android:strokeLineJoin="miter" android:strokeWidth="0.26458332"/>
+        android:strokeWidth="0.26458332"
+        android:strokeAlpha="1"
+        android:strokeColor="#000000"
+        android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" />
 </vector>
