--- a/app/src/main/res/drawable/archer_previous.xml
+++ b/app/src/main/res/drawable/archer_previous.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
- 
-        <item android:state_window_focused="false" android:state_enabled="true" android:drawable="@drawable/archer1p" />
-        <item android:state_pressed="true" android:drawable="@drawable/archer2p" />
-        <item android:state_focused="true" android:drawable="@drawable/archer1p" />
-        <item android:state_enabled="true" android:drawable="@drawable/archer1p" />
+
+    <item android:drawable="@drawable/archer1p" android:state_enabled="true" android:state_window_focused="false" />
+    <item android:drawable="@drawable/archer2p" android:state_pressed="true" />
+    <item android:drawable="@drawable/archer1p" android:state_focused="true" />
+    <item android:drawable="@drawable/archer1p" android:state_enabled="true" />
 
 </selector>
