--- a/app/src/main/res/drawable/ic_cible.xml
+++ b/app/src/main/res/drawable/ic_cible.xml
@@ -1,19 +1,42 @@
-<vector android:autoMirrored="true" android:height="100dp"
-    android:viewportHeight="100" android:viewportWidth="100"
-    android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillAlpha="1" android:fillColor="#357BE3"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="100dp"
+    android:height="100dp"
+    android:autoMirrored="true"
+    android:viewportWidth="100"
+    android:viewportHeight="100">
+    <path
+        android:fillAlpha="1"
+        android:fillColor="#357BE3"
         android:pathData="M50,50m-49.738,0a49.738,49.738 0,1 1,99.476 0a49.738,49.738 0,1 1,-99.476 0"
-        android:strokeAlpha="1" android:strokeColor="#070505" android:strokeWidth="0.8"/>
-    <path android:fillAlpha="1" android:fillColor="#ff0005"
+        android:strokeWidth="0.8"
+        android:strokeAlpha="1"
+        android:strokeColor="#070505" />
+    <path
+        android:fillAlpha="1"
+        android:fillColor="#ff0005"
         android:pathData="M10.414,50a39.586,39.586 0,1 0,79.173 0a39.586,39.586 0,1 0,-79.173 0z"
-        android:strokeAlpha="1" android:strokeColor="#070000" android:strokeWidth="0.8"/>
-    <path android:fillAlpha="1" android:fillColor="#ff0005"
+        android:strokeWidth="0.8"
+        android:strokeAlpha="1"
+        android:strokeColor="#070000" />
+    <path
+        android:fillAlpha="1"
+        android:fillColor="#ff0005"
         android:pathData="M20.31,50a29.69,29.69 0,1 0,59.379 0a29.69,29.69 0,1 0,-59.379 0z"
-        android:strokeAlpha="1" android:strokeColor="#070000" android:strokeWidth="0.8"/>
-    <path android:fillAlpha="1" android:fillColor="#fafa0a"
+        android:strokeWidth="0.8"
+        android:strokeAlpha="1"
+        android:strokeColor="#070000" />
+    <path
+        android:fillAlpha="1"
+        android:fillColor="#fafa0a"
         android:pathData="M50,50m-19.793,0a19.793,19.793 0,1 1,39.586 0a19.793,19.793 0,1 1,-39.586 0"
-        android:strokeAlpha="1" android:strokeColor="#070000" android:strokeWidth="0.8"/>
-    <path android:fillAlpha="1" android:fillColor="#fafa0a"
+        android:strokeWidth="0.8"
+        android:strokeAlpha="1"
+        android:strokeColor="#070000" />
+    <path
+        android:fillAlpha="1"
+        android:fillColor="#fafa0a"
         android:pathData="M40.103,50a9.897,9.897 0,1 0,19.793 0a9.897,9.897 0,1 0,-19.793 0z"
-        android:strokeAlpha="1" android:strokeColor="#070000" android:strokeWidth="0.8"/>
+        android:strokeWidth="0.8"
+        android:strokeAlpha="1"
+        android:strokeColor="#070000" />
 </vector>
