--- a/app/src/main/res/layout-xxhdpi/content_main.xml
+++ b/app/src/main/res/layout-xxhdpi/content_main.xml
@@ -58,15 +58,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/archer"
         app:layout_constraintTop_toBottomOf="@id/archer"
-        tools:layout_editor_absoluteY="68dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="68dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_weight="3"
+        android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result">
 
@@ -114,8 +114,8 @@
                     style="@android:style/Widget.Button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#F8FF3B"
                     android:lineSpacingExtra="8sp"
                     android:text=" 10 " />
@@ -124,8 +124,8 @@
                     android:id="@+id/button9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#F8FF3B"
                     android:lineSpacingExtra="8sp"
                     android:text="  9  " />
@@ -134,8 +134,8 @@
                     android:id="@+id/button8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#D80E2C"
                     android:text="  8  " />
 
@@ -143,8 +143,8 @@
                     android:id="@+id/button7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#D80E2C"
                     android:text="  7  "
                     android:textSize="14sp" />
@@ -153,8 +153,8 @@
                     android:id="@+id/button6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#357BE3"
                     android:text="  6  "
                     android:textSize="14sp" />
@@ -169,8 +169,8 @@
                     android:id="@+id/button5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#357BE3"
                     android:text="  5  " />
 
@@ -178,8 +178,8 @@
                     android:id="@+id/button4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#00050B"
                     android:text="  4  "
                     android:textColor="#FAF6F6" />
@@ -188,8 +188,8 @@
                     android:id="@+id/button3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#00050B"
                     android:text="  3  "
                     android:textColor="#FAF6F6" />
@@ -198,8 +198,8 @@
                     android:id="@+id/button2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#FAF6F6"
                     android:text="  2  "
                     android:textColor="#00050B" />
@@ -208,8 +208,8 @@
                     android:id="@+id/button1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#FAF6F6"
                     android:text="  1  "
                     android:textColor="#00050B" />
@@ -218,39 +218,39 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_rowWeight="1">
+                android:layout_rowWeight="1"
+                android:layout_weight="1">
 
                 <Button
                     android:id="@+id/Manque"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:text="Manque" />
 
                 <Button
                     android:id="@+id/Annul"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:text="Annul" />
 
                 <Button
                     android:id="@+id/bPreviousArcher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="@drawable/archer_previous" />
 
                 <Button
                     android:id="@+id/bNextArcher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="@drawable/archer_next" />
 
             </TableRow>
