--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -66,8 +66,8 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_weight="3"
+        android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
@@ -115,8 +115,8 @@
                     style="@android:style/Widget.Button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#F8FF3B"
                     android:lineSpacingExtra="8sp"
                     android:text=" 10 " />
@@ -125,8 +125,8 @@
                     android:id="@+id/button9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#F8FF3B"
                     android:lineSpacingExtra="8sp"
                     android:text="  9  " />
@@ -135,8 +135,8 @@
                     android:id="@+id/button8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#D80E2C"
                     android:text="  8  " />
 
@@ -144,8 +144,8 @@
                     android:id="@+id/button7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#D80E2C"
                     android:text="  7  "
                     android:textSize="14sp" />
@@ -154,8 +154,8 @@
                     android:id="@+id/button6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#357BE3"
                     android:text="  6  "
                     android:textSize="14sp" />
@@ -170,8 +170,8 @@
                     android:id="@+id/button5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#357BE3"
                     android:text="  5  " />
 
@@ -179,8 +179,8 @@
                     android:id="@+id/button4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#00050B"
                     android:text="  4  "
                     android:textColor="#FAF6F6" />
@@ -189,8 +189,8 @@
                     android:id="@+id/button3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#00050B"
                     android:text="  3  "
                     android:textColor="#FAF6F6" />
@@ -199,8 +199,8 @@
                     android:id="@+id/button2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#FAF6F6"
                     android:text="  2  "
                     android:textColor="#00050B" />
@@ -209,8 +209,8 @@
                     android:id="@+id/button1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="#FAF6F6"
                     android:text="  1  "
                     android:textColor="#00050B" />
@@ -219,39 +219,39 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_rowWeight="1">
+                android:layout_rowWeight="1"
+                android:layout_weight="1">
 
                 <Button
                     android:id="@+id/Manque"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:text="Manque" />
 
                 <Button
                     android:id="@+id/Annul"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:text="Annul" />
 
                 <Button
                     android:id="@+id/bPreviousArcher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="@drawable/archer_previous" />
 
                 <Button
                     android:id="@+id/bNextArcher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_rowWeight="1"
+                    android:layout_weight="1"
                     android:background="@drawable/archer_next" />
 
             </TableRow>
