--- a/app/src/main/res/layout-xhdpi/content_main.xml
+++ b/app/src/main/res/layout-xhdpi/content_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:context=".Activity_MainActivity">
 
 
     <EditText
