--- a/app/src/main/res/layout-xxhdpi/activity_image_resultat.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_image_resultat.xml
@@ -55,10 +55,11 @@
 
     <ImageView
         android:id="@+id/air_image"
-        android:layout_width="0dp"
-        android:layout_height="400dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_marginTop="120dp"
+        app:layout_constraintDimensionRatio="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/air_round" />
