--- a/app/src/main/res/layout/activity_image_resultat.xml
+++ b/app/src/main/res/layout/activity_image_resultat.xml
@@ -49,6 +49,7 @@
         android:layout_height="400dp"
         android:layout_marginTop="120dp"
         android:orientation="vertical"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/air_round" />
@@ -59,6 +60,7 @@
         android:layout_height="400dp"
         android:layout_gravity="center"
         android:layout_marginTop="120dp"
+        app:layout_constraintDimensionRatio="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/air_round" />
