--- a/app/src/main/res/layout-xhdpi/content_main.xml
+++ b/app/src/main/res/layout-xhdpi/content_main.xml
@@ -7,6 +7,13 @@
     android:orientation="vertical"
     tools:context=".Activity_MainActivity">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="xhdpi"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/result" />
 
     <EditText
         android:id="@+id/result"
