--- a/app/src/main/res/layout/activity_config_round.xml
+++ b/app/src/main/res/layout/activity_config_round.xml
@@ -43,8 +43,9 @@
 
     </TableRow>
 
+
     <TableRow
-        android:id="@+id/tableRow11"
+        android:id="@+id/tableRow12"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tableRow1"
@@ -57,22 +58,24 @@
 
         <EditText
             android:id="@+id/INumberArrow"
+            android:hint="@string/acr_arrowByEnd"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:inputType="numberDecimal"
-            app:layout_constraintStart_toEndOf="@+id/IRoundName"
+            app:layout_constraintTop_toBottomOf="@id/bLetGo"
             tools:layout_editor_absoluteY="0dp" />
 
         <EditText
             android:id="@+id/INumberEndByRound"
+            android:hint="@string/acr_EndByRound"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:inputType="numberDecimal"
-            app:layout_constraintStart_toEndOf="@+id/INumberArrow"
+            app:layout_constraintStart_toEndOf="@id/INumberArrow"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
@@ -106,20 +109,20 @@
         android:id="@+id/tableRow2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_below="@id/tableRow11"
+        android:layout_below="@id/tableRow12"
         android:layout_weight="40"
         app:layout_constraintBottom_toTopOf="@+id/tableRow3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableRow11">
+        app:layout_constraintTop_toBottomOf="@+id/tableRow12">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Archer" />
+            android:text="@string/archer_base" />
 
         <ListView
             android:id="@+id/archersBase"
