--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     tools:context=".Activity_MainActivity">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/result" />
+
 
     <EditText
         android:id="@+id/result"
@@ -60,11 +68,23 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="68dp" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="46dp"
+        android:layout_height="24dp"
+        android:text="@string/End"
+        app:layout_constraintStart_toStartOf="@+id/ArrowValue"
+        app:layout_constraintTop_toBottomOf="@+id/archer" />
+
+
     <LinearLayout
         android:id="@+id/linearLayout"
+        android:layout_marginStart="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="5dp"
         android:gravity="center"
         app:layout_constraintDimensionRatio="1"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +100,7 @@
             android:gravity="center"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_2" />
 
@@ -90,7 +110,7 @@
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         android:layout_weight="1"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +119,7 @@
 
         <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="110dp"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -108,6 +128,7 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1">
 
                 <Button
@@ -164,6 +185,7 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_rowWeight="1"
                 android:layout_weight="1">
 
                 <Button
@@ -259,13 +281,6 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="46dp"
-        android:layout_height="24dp"
-        android:text="@string/End"
-        app:layout_constraintStart_toStartOf="@+id/ArrowValue"
-        app:layout_constraintTop_toBottomOf="@+id/archer" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
