--- a/app/src/main/res/layout-xhdpi/content_main.xml
+++ b/app/src/main/res/layout-xhdpi/content_main.xml
@@ -20,7 +20,6 @@
         android:layout_width="180dp"
         android:layout_height="100dp"
         android:layout_marginTop="50dp"
-        android:editable="false"
         android:ems="10"
         android:fontFamily="serif-monospace"
         android:gravity="end"
@@ -52,23 +51,27 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="3"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        app:layout_constraintDimensionRatio="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result">
 
         <ImageView
             android:id="@+id/imageCible"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/ic_cible"
             android:contentDescription="DessinCible"
+            app:layout_constraintDimensionRatio="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/layout_2" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     </LinearLayout>
 
