--- a/app/src/main/res/layout-xxhdpi/content_main.xml
+++ b/app/src/main/res/layout-xxhdpi/content_main.xml
@@ -79,14 +79,13 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_marginStart="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="5dp"
-        android:gravity="center"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintDimensionRatio="1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result">
 
@@ -97,24 +96,22 @@
             android:layout_weight="1"
             android:background="@drawable/ic_cible"
             android:contentDescription="DessinCible"
-            android:gravity="center"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_2" />
-
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         android:layout_weight="1"
         android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.060000002">
 
 
         <TableLayout
@@ -125,6 +122,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_3">
 
+
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -133,8 +131,9 @@
 
                 <Button
                     android:id="@+id/button10"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    style="@android:style/Widget.Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#F8FF3B"
@@ -143,8 +142,8 @@
 
                 <Button
                     android:id="@+id/button9"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#F8FF3B"
@@ -153,8 +152,8 @@
 
                 <Button
                     android:id="@+id/button8"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#D80E2C"
@@ -162,8 +161,8 @@
 
                 <Button
                     android:id="@+id/button7"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#D80E2C"
@@ -172,8 +171,8 @@
 
                 <Button
                     android:id="@+id/button6"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#357BE3"
@@ -189,8 +188,8 @@
 
                 <Button
                     android:id="@+id/button5"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#357BE3"
@@ -198,8 +197,8 @@
 
                 <Button
                     android:id="@+id/button4"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#00050B"
@@ -208,8 +207,8 @@
 
                 <Button
                     android:id="@+id/button3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#00050B"
@@ -218,8 +217,8 @@
 
                 <Button
                     android:id="@+id/button2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#FAF6F6"
@@ -228,15 +227,14 @@
 
                 <Button
                     android:id="@+id/button1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="#FAF6F6"
                     android:text="  1  "
                     android:textColor="#00050B" />
             </TableRow>
-
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -245,7 +243,7 @@
 
                 <Button
                     android:id="@+id/Manque"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
@@ -253,7 +251,7 @@
 
                 <Button
                     android:id="@+id/Annul"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
@@ -261,7 +259,7 @@
 
                 <Button
                     android:id="@+id/bPreviousArcher"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
@@ -269,21 +267,15 @@
 
                 <Button
                     android:id="@+id/bNextArcher"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_rowWeight="1"
                     android:layout_weight="1"
                     android:background="@drawable/archer_next" />
 
-                <Button
-                    android:id="@+id/Dummy"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_rowWeight="1"
-                    android:layout_weight="1" />
-
-
             </TableRow>
+
+
         </TableLayout>
 
     </LinearLayout>
